[package]
name = "markdown"
version = "0.1.0"
authors = ["'lanqy' <'lanqy1314@gmail.com'>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.10"
serde = { version ="1.0.104", features = ["derive"] }
serde_json ="1.0.48"
xmlwriter = "0.1.0"